# courier-dispatch

./: CLAUDE.md  README.md  pyproject.toml
.beads/: metadata.json
scripts/: build.sh  install.sh
skill/courier-agent/: SKILL.md
skill/dispatch/: SKILL.md
src/courier_agent/: __init__.py  server.py
src/courier_agent/tools/: codebase.py  git_tools.py  plan.py  review.py  runner.py
src/courier_agent/utils/: file_utils.py
src/courier_dispatch/: __init__.py  server.py
src/courier_dispatch/tools/: codebase.py  git_tools.py  plan.py  review.py  runner.py
src/courier_dispatch/utils/: config.py  file_utils.py  git_utils.py  tunnel.py
tests/: test_codebase.py  test_git_tools.py  test_plan.py  test_review.py  test_runner.py  test_utils.py
