[project]
name = "courier-agent"
version = "0.1.0"
description = "MCP server that turns Claude into a guided coding assistant — teaches, reviews, and verifies, but never writes code for you"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "mcp[cli]",
    "gitpython",
]

[project.scripts]
courier-agent = "courier_agent.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/courier_agent"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]
