[project]
name = "courier-dispatch"
version = "0.1.0"
description = "MCP server that turns any AI chat app into a guided coding assistant — teaches, reviews, and verifies, but never writes code for you"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]",
    "gitpython",
    "uvicorn",
]

[project.scripts]
dispatch = "courier_dispatch.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/courier_dispatch"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pyinstaller>=6.0",
]
